<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">FMCG Reader</string>
    <string name="text_status_none">None</string>

    <!-- Menu -->
    <string name="action_shopping_cart">Shopping cart</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="action_log">Log</string>
    <string name="action_about">About&#8230;</string>

    <!-- Reads Activity -->
    <string name="title_activity_reads">Read tags</string>
    <string name="reads_activity_readed_uid_header">Tag Unique Identifier</string>
    <string name="text_view_readed_uid_number_empty">--</string>
    <string name="reads_activity_readed_product_header">Product name</string>
    <string name="text_view_readed_product_name_empty">--</string>
    <string name="reads_activity_readed_manufacturer_header">Manufacturer name</string>
    <string name="text_view_readed_manufacturer_name_empty">--</string>
    <string name="reads_activity_readed_price_header">Price</string>
    <string name="text_view_readed_price_value_empty">--</string>
    <string name="reads_activity_readed_other_data_header">Other readed data</string>
    <string name="reads_activity_readed_list_header">List header</string>
    <string name="text_view_readed_list_value_empty">List value</string>
    <string name="btn_reads_add_to_current_shopping_cart">Add to cart</string>
    <string name="btn_reads_clear">Clear</string>
    <string name="read_error_toast">READ ERROR\n\nTRY AGAINT</string>
    <string name="product_exists_on_your_shopping_cart_toast">PRODUCT EXISTS IN YOUR\nSHOPPING CART\n\nPLEASE READ AND ADD ANOTHER</string>
    <string name="nfc_module_not_detected">This device doesn\'t have NFC module!</string>
    <string name="please_activate_nfc">Please activate NFC and press BACK to return to the application!</string>
    <string name="toast_to_the_end">to the end</string>

    <!-- Shipping Cart Activity -->
    <string name="title_activity_shopping_cart">Shopping cart</string>
    <string name="text_view_shopping_cart_total_price_title">TOTAL:</string>
    <string name="btn_shopping_cart_save">Complete</string>
    <string name="btn_shopping_cart_collapse">Collapse</string>
    <string name="btn_shopping_cart_clear">Clear</string>
    <string name="alert_dialog_delete_title">Delete entry</string>
    <string name="alert_dialog_delete_message">Are you sure to delete this entry?</string>
    <string name="alert_dialog_delete_yes">YES</string>
    <string name="alert_dialog_delete_no">NO</string>
    <string name="alert_dialog_clear_title">Clear list</string>
    <string name="alert_dialog_clear_message">Are you sure to delete all entry?</string>
    <string name="alert_dialog_clear_yes">YES</string>
    <string name="alert_dialog_clear_no">NO</string>
    <string name="alert_dialog_make_order">Are you sure you want to make this order?</string>
    <string name="alert_dialog_order_success">Your order has been sent successfully. Do you wish to clear list?</string>
    <string name="alert_dialog_order_fail">Order sending FAILED. Check internet connection and please try again</string>

    <!-- GS1 Code and custom fields -->
    <string name="PN">Product name</string>
    <string name="MN">Manufacurer name</string>
    <string name="WA">Web address</string>
    <string name="AI01">Global Trade Item Number</string>
    <string name="AI11">Production date</string>
    <string name="AI15">Best before date</string>
    <string name="AI17">Expiration date</string>
    <string name="AI21">Serial number</string>
    <string name="AI310">Net weight</string>
    <string name="AI311">Length</string>
    <string name="AI312">Width</string>
    <string name="AI313">Heigh</string>
    <string name="AI314">Area</string>
    <string name="AI315">Net volume</string>
    <string name="AI316">Net volume</string>
    <string name="AI37">Count of trade items</string>
    <string name="AI390">Amount payable</string>
    <string name="AI391">Amount payable</string>
    <string name="AI392">Amount payable per measure unit</string>
    <string name="AI393">Amount payable per measure unit</string>
    <string name="NI01">Energy in 100 g</string>
    <string name="NI02">Fat(total) in 100 g</string>
    <string name="NI03">Fat(saturated) in 100 g</string>
    <string name="NI04">Carbohydrate(total) in 100 g</string>
    <string name="NI05">Carbohydrate(sugars) in 100 g</string>
    <string name="NI06">Protein in 100 g</string>
    <string name="NI07">Sodium in 100 g</string>
    <string name="NI08">Roughage in 100 g</string>

    <!-- Settings -->
    <string name="title_activity_setting">Settings</string>
    <string name="pref_cat_vcd">TRANSMISSION TO TAG</string>
    <string name="pref_vcd_addressed_mode_title">Use addressed mode</string>
    <string name="pref_vcd_addressed_mode_summary">Select tag by UID</string>
    <string name="pref_cat_vicc">TRANSMISSION FROM TAG</string>
    <string name="pref_vicc_high_data_rate_title">Speed up transmission</string>
    <string name="pref_vicc_high_data_rate_summary">Four times increases bit rate</string>
    <string name="pref_vicc_double_subcarrier_title">Alternative modulation</string>
    <string name="pref_vicc_double_subcarrier_summary">Add second subcarrier</string>

    <!-- Log Activity -->
    <string name="title_activity_log">Log</string>
        
    <!-- About Activity -->
    <string name="title_activity_about">About</string>
    <string name="about_prz">Rzeszow University of Technology</string>
    <string name="about_weii">The Faculty of Electrical and Computer Engineering</string>
    <string name="about_author">Damian Szewc</string>
    <string name="about_subject">The application for contactless identification of objects with NFC chips embedded in mobile devices</string>
    <string name="about_supervisorHeader">Supervisor:</string>
    <string name="about_supervisor">Bartosz Pawłowicz, PhD, Eng.</string>
    <string name="about_year">Rzeszow 2018</string>

    <!-- Reads Stat -->
    <string name="reads_stat_default_value">--</string>
    <string name="reads_stat_app_startup_header">Startup counter</string>
    <string name="reads_stat_readed_tag_cnt_header">Readed tags counter</string>
    <string name="reads_stat_add_to_shopping_cart_cnt_header">Add to shopping cart counter</string>
    <string name="btn_reads_stat_reset_stat">RESET</string>
    <string name="alert_dialog_reset_stat_title">Reset statistics</string>
    <string name="alert_dialog_reset_stat_message">Are you sure to reset this statistics?</string>
    <string name="alert_dialog_reset_stat_yes">YES</string>
    <string name="alert_dialog_reset_stat_no">NO</string>

    <!-- Shipping Cart Stat -->
    <string name="shopping_cart_stat_no_items">Shopping cart is empty!</string>
    <string name="shopping_cart_stat_default_value">--</string>
    <string name="shopping_cart_stat_nr_of_items_header">Number of items</string>
    <string name="shopping_cart_stat_average_price_header">Average price</string>
    <string name="shopping_cart_stat_highest_price_header">The highest price</string>
    <string name="shopping_cart_stat_lowest_price_header">The lowest price</string>
    <string name="shopping_cart_stat_number_of_short_shelf_life_header">Items with a short shelf life (&lt;7 days)</string>
    <string name="shopping_cart_stat_the_shortest_shelf_life_header">Shortest shelf life</string>

    <!-- Othes -->
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="pcs">pcs.</string>

</resources>
