<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">
 
    <PreferenceCategory
    	android:title="@string/pref_cat_vcd"
    	android:key="pref_cat_vcd">
    	
	    <CheckBoxPreference
	        android:defaultValue="true"
	        android:key="pref_vcd_addressed_mode"
	       	android:title="@string/pref_vcd_addressed_mode_title" 
	        android:summary="@string/pref_vcd_addressed_mode_summary"/>
	    
<!-- 	      <ListPreference      -->
<!-- 	        android:title="Tryb komunikacji" -->
<!--             android:summary="Wybierz tryb adresowanyy lub nieadresowany" -->
<!--            	android:key="communication_mode" -->
<!--             android:defaultValue="1" -->
<!--             android:entries="@array/listCommunicationMode" -->
<!--             android:entryValues="@array/listCommunicationModeValue" /> -->
    </PreferenceCategory>
    
    <PreferenceCategory
	   	android:title="@string/pref_cat_vicc"
	   	android:key="pref_cat_vicc">
	    
	   	<CheckBoxPreference
	        android:defaultValue="true"
	        android:key="pref_vicc_high_data_rate"
	       	android:title="@string/pref_vicc_high_data_rate_title"
	        android:summary="@string/pref_vicc_high_data_rate_summary" />
	    <CheckBoxPreference
	        android:defaultValue="true"
	        android:key="pref_vicc_double_subcarrier"
	        android:title="@string/pref_vicc_double_subcarrier_title"
 	        android:summary="@string/pref_vicc_double_subcarrier_summary" /> 
    </PreferenceCategory>
                
</PreferenceScreen>