<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ap.mgr.ReadsActivity" >
    
    <item
        android:id="@+id/action_shopping_cart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_shopping_cart"/> 
    
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_statistics"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_log"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_log"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
